--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   english_words: ^4.0.0
   provider: ^6.1.2
   google_fonts: ^6.2.1
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
