--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,12 +11,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   english_words: ^4.0.0
   provider: ^6.1.2
   google_fonts: ^6.2.1
   http: ^1.0.0
   logging: ^1.3.0
+  firebase_auth: ^5.5.1  
+  firebase_core: ^3.12.1
+  sign_in_with_apple: ^6.1.4
+  google_sign_in: ^6.3.0
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
