--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,27 +6,25 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 0.1.1+1
 
 environment:
-  sdk: ^3.6.0
+  sdk: '>=3.0.0 <4.0.0'  # More compatible SDK range
 
 dependencies:
   flutter:
     sdk: flutter
-  english_words: ^4.0.0
-  provider: ^6.1.2
-  google_fonts: ^6.2.1
+  provider: ^6.0.5
+  google_fonts: ^5.1.0
   http: ^1.0.0
-  logging: ^1.3.0
-  firebase_auth: ^5.5.1  
+  logging: ^1.2.0
   firebase_core: ^3.12.1
-  sign_in_with_apple: ^6.1.4
-  google_sign_in: ^6.3.0
-  flutter_secure_storage: ^9.2.4
+  firebase_auth: ^5.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
+  
+  assets:
+    - lib/images/
