--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,16 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
-  google_fonts: ^5.1.0
+  google_fonts: ^6.2.1
   http: ^1.0.0
   logging: ^1.2.0
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   google_sign_in: ^6.3.0
+  sign_in_with_apple: ^6.1.4
+  cloud_firestore: ^5.6.5
+  username_generator: ^1.3.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
