Refactor profile and search pages

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,6 +57,10 @@
 	<key>GIDClientID</key>
 	<string>422244124062-uccj0boeu3vnns162fchhgadjpht1iil.apps.googleusercontent.com</string>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>We need access to your photo library to upload images.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>We need access to your camera to take pictures.</string>
 </array>
 </dict>
 </plist>
