--- a/macos/Runner/DebugProfile.entitlements
+++ b/macos/Runner/DebugProfile.entitlements
@@ -20,5 +20,7 @@
 	<array>
 		<string>$(AppIdentifierPrefix)com.google.GIDSignIn</string>
 	</array>
+	<key>com.apple.security.files.user-selected.read-only</key>
+  <true/>
 </dict>
 </plist>
