--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>422244124062-uccj0boeu3vnns162fchhgadjpht1iil.apps.googleusercontent.com</string>
+	<string>422244124062-m6dt24i1m6d82mph9jr51vjmdbjg9tid.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.422244124062-uccj0boeu3vnns162fchhgadjpht1iil</string>
+	<string>com.googleusercontent.apps.422244124062-m6dt24i1m6d82mph9jr51vjmdbjg9tid</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>422244124062-3lc8u00ht8ss5uvsuk43efa8ue98t67i.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.beavercash</string>
+	<string>com.soylentcola.beavercash</string>
 	<key>PROJECT_ID</key>
 	<string>beavercash-1b414</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:422244124062:ios:6155fe2f12aabc10c8028f</string>
+	<string>1:422244124062:ios:6cb79fadce76b59ec8028f</string>
 </dict>
 </plist>
