--- a/macos/Runner/Release.entitlements
+++ b/macos/Runner/Release.entitlements
@@ -10,11 +10,15 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array/>
+	<key>com.apple.security.cs.allow-unsigned-executable-memory</key>
+	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)com.google.GIDSignIn</string>
 	</array>
+	<key>com.apple.security.files.user-selected.read-only</key>
+  <true/>
 </dict>
 </plist>
