--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   cloud_firestore: ^5.6.5
   username_generator: ^1.3.0
   shared_preferences: ^2.5.3
+  image_picker: 
+  firebase_storage: 
+  path:
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +36,4 @@ flutter:
   
   assets:
     - lib/images/
+    - shorebird.yaml
